--- a/blocks/offerse/offerse.css
+++ b/blocks/offerse/offerse.css
@@ -91,6 +91,7 @@
 
 .checklist__button {
     border: white solid 5px;
+    padding-top: 5px;
     padding-left: 10px;
     border-radius: 10px;
     box-shadow: 5px 5px 7px rgba(0, 0, 0, 0.6);
@@ -157,6 +158,7 @@
 
 .gifts__button {
     border: white solid 5px;
+    padding-top: 5px;
     margin-left: 10px;
     height: 50px;
     padding-left: 10px;
