add video block

--- a/pages/index.css
+++ b/pages/index.css
@@ -31,3 +31,5 @@
 @import url(../blocks/carousel/carousel.css);
 
 @import url(../blocks/offerse/offerse.css);
+
+@import url(../blocks/video/video.css);
