--- a/blocks/offerse/offerse.css
+++ b/blocks/offerse/offerse.css
@@ -139,6 +139,7 @@
     background-color: black;
     border-bottom-right-radius: 20px;
     border-bottom-left-radius: 20px;
+    box-shadow: 0px 3px 4px #282828;
 }
 
 .gifts__description {
@@ -184,11 +185,38 @@
     align-items: center;
     margin-top: 100px;
     height: 200px;
-    background-color: #e9b60d;
+    background: linear-gradient(#e9b60d, #6c570d);
     border-radius: 20px;
 }
 
 .subscribe__img {
     width: 150px;
     height: 100px;
+}
+
+.subscribe__link:hover {
+    opacity: 0.5;
+}
+
+.subscribe__description {
+    margin: 0;
+    margin-left: 10px;
+    font-size: 20px;
+    color: black;
+}
+
+.subscribe__button {
+    padding: 12px;
+    margin-top: 10px;
+    height: 50px;
+    font-size: 26px;
+    font-weight: 900;
+    color: #e9b60d;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.subscribe__button:hover {
+    opacity: 0.5;
 }
