--- a/pages/index.css
+++ b/pages/index.css
@@ -33,3 +33,5 @@
 @import url(../blocks/offerse/offerse.css);
 
 @import url(../blocks/video/video.css);
+
+@import url(../blocks/footer/footer.css);
