--- a/blocks/intro/-photo/__wrapper/intro-photo__wrapper.css
+++ b/blocks/intro/-photo/__wrapper/intro-photo__wrapper.css
@@ -10,7 +10,7 @@
     right: 10px;
     width: 50px;
     height: 50px;
-    background-image: url('/images/ew_logo_mini.png');
+    background-image: url('/images/ew-logo-mini.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
