--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -69,3 +69,53 @@
     object-fit: cover;
     object-position: center;
 }
+
+@media (max-width: 768px) {
+    .video {
+        margin: 20px 20px 0;
+        border-radius: 10px;
+        min-height: auto;
+    }
+
+
+    .video__header {
+        flex-direction: column;
+        align-items: center;
+        padding-top: 10px;
+    }
+
+    .video__link-img {
+        display: none;
+    }
+
+    .video__title img {
+        width: 100%;
+        height: auto;
+    }
+
+    .video__paragraph {
+        font-size: 20px;
+        text-align: center;
+        line-height: 1.4;
+    }
+
+    .videos__wrapper {
+        padding: 0 10px 20px;
+    }
+
+    .videos__yt {
+        display: block;
+        width: 100%;
+    }
+
+    .videos__yt-item {
+        margin-bottom: 20px;
+    }
+
+    .videos__yt-item img {
+        width: 100%;
+        object-fit: cover;
+        height: 99%;
+    }
+}
+
