--- a/blocks/header/__image/header__image-left.css
+++ b/blocks/header/__image/header__image-left.css
@@ -2,3 +2,11 @@
     width: 345px;
     height: 77px;
 }
+
+@media (max-width: 768px) {
+    .header__image-left {
+        padding-top: 30px;
+        width: 300px;
+        height: 70px;
+    }
+}
