--- a/blocks/header/__image/header__image-right.css
+++ b/blocks/header/__image/header__image-right.css
@@ -2,3 +2,11 @@
     width: 380px;
     height: 67px;
 }
+
+@media (max-width: 768px) {
+    .header__image-right {
+        width: 300px;
+        height: 60px;
+    }
+}
+
