--- a/blocks/offerse/offerse.css
+++ b/blocks/offerse/offerse.css
@@ -1,3 +1,4 @@
+/* Общие стили */
 .offers {
     margin: 40px 100px 0;
     max-width: 1200px;
@@ -32,7 +33,6 @@
     background-size: 150px 150px;
     background-position: center 5px;
     background-repeat: no-repeat;
-
 }
 
 .marketplace__link-ozon {
@@ -41,7 +41,6 @@
     background-size: 142px 142px;
     background-position: center 10px;
     background-repeat: no-repeat;
-
 }
 
 .marketplace__description {
@@ -89,10 +88,12 @@
     font-weight: bold;
 }
 
-.checklist__button {
+.checklist__button, .gifts__button, .subscribe__button {
+    display: inline-block;
+    text-align: center;
+    text-decoration: none;
     border: white solid 5px;
-    padding-top: 1px;
-    padding-left: 10px;
+    padding: 10px;
     border-radius: 10px;
     box-shadow: 5px 5px 7px rgba(0, 0, 0, 0.6);
     background-color: #e9b60d;
@@ -102,11 +103,11 @@
     cursor: pointer;
 }
 
-.checklist__button:hover {
+.checklist__button:hover, .gifts__button:hover, .subscribe__button:hover {
     background-color: #b7910d;
 }
 
-.checklist__button:active {
+.checklist__button:active, .gifts__button:active, .subscribe__button:active {
     background-color: #6c570d;
 }
 
@@ -148,36 +149,11 @@
     font-weight: bold;
 }
 
-
-
 .gift__description {
     padding-left: 20px;
     text-shadow: #ffffff 1px 0 30px;
     font-size: 40px;
     font-weight: bold;
-}
-
-.gifts__button {
-    border: white solid 5px;
-    padding-top: 1px;
-    margin-left: 10px;
-    height: 50px;
-    padding-left: 10px;
-    border-radius: 10px;
-    box-shadow: 5px 5px 7px rgba(0, 0, 0, 0.6);
-    background-color: #000000;
-    font-size: 25px;
-    font-weight: bold;
-    color: #e9b60d;
-    cursor: pointer;
-}
-
-.gifts__button:hover {
-    background-color: #262525;
-}
-
-.gifts__button:active {
-    background-color: #484742;
 }
 
 .subscribe {
@@ -205,18 +181,116 @@
     color: black;
 }
 
-.subscribe__button {
-    padding: 12px;
-    margin-top: 10px;
-    height: 50px;
-    font-size: 26px;
-    font-weight: 900;
-    color: #e9b60d;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
+.subscribe__button-bot {
+    display: inline-block;
 }
 
-.subscribe__button:hover {
-    opacity: 0.5;
+@media (max-width: 768px) {
+    .offers {
+        margin: 20px 10px 0;
+        border-radius: 10px;
+    }
+
+    .subscribe {
+        margin-top: 40px;
+        width: 355px;
+    }
+
+    .marketplaces {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .marketplace__link {
+        margin: 20px 0;
+        min-width: auto;
+        width: 53%;
+        max-width: 300px;
+    }
+
+    .marketplace__link-ozon {
+        margin-left: 0;
+    }
+
+    .gifts {
+        margin: 20px;
+        max-width: 100%;
+    }
+
+    .gift {
+        max-width: 350px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .checklist {
+        width: 100%;
+        min-width: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .checklist__top, .checklist__bottom, .gift {
+        padding: 10px;
+    }
+
+    .checklist__paragraph-left, .checklist__paragraph-right, .gift__description, .checklist__button, .gifts__button {
+        font-size: 28px;
+    }
+
+    .checklist__paragraph-left, .checklist__paragraph-right {
+        padding-top: 20px;
+    }
+
+    .checklist__paragraph-bottom {
+        margin: 0;
+        margin-top: 1px;
+        font-size: 21px;
+    }
+
+    .gift__description {
+        font-size: 36px;
+    }
+
+    .gifts__button, .checklist__button {
+        font-size: 20px;
+    }
+
+    .offers__img {
+        position: static;
+        width: 80%;
+        height: auto;
+        margin-top: 20px;
+    }
+
+    .subscribe__button {
+        margin-right: 10px;
+        padding: 12px;
+        font-size: 22px;
+    }
+
+    .gifts__button, .checklist__button {
+        font-size: 32px;
+    }
+
+    .gift__description {
+        padding: 0;
+    }
+
+    .subscribe__description {
+        font-size: 17px;
+    }
+
+    .checklist__bottom {
+        display: flex;
+        flex-direction: column;
+        margin-left: 20px;
+    }
+
+    .subscribe__button-bot {
+        padding: 3px;
+        margin-top: 10px;
+    }
 }
