--- a/blocks/offerse/offerse.css
+++ b/blocks/offerse/offerse.css
@@ -62,6 +62,9 @@
     min-width: 400px;
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .checklist__top {
@@ -72,7 +75,7 @@
 
 .checklist__bottom {
     display: flex;
-    margin-left: 20px;
+    margin-left: 60px;
     padding-top: 5px;
 }
 
@@ -150,7 +153,8 @@
 }
 
 .gift__description {
-    padding-left: 20px;
+    margin: 0;
+    padding-left: 48px;
     text-shadow: #ffffff 1px 0 30px;
     font-size: 40px;
     font-weight: bold;
@@ -168,6 +172,7 @@
 .subscribe__img {
     width: 150px;
     height: 100px;
+    margin-left: 40px;
 }
 
 .subscribe__link:hover {
@@ -177,12 +182,18 @@
 .subscribe__description {
     margin: 0;
     margin-left: 10px;
-    font-size: 20px;
-    color: black;
+    margin-bottom: 10px;
+    font-size: 18px;
+    font-weight: 500;
+    color: white;
 }
 
 .subscribe__button-bot {
     display: inline-block;
+}
+
+.gifts__button-bottom {
+    margin-left: 20px;
 }
 
 @media (max-width: 768px) {
@@ -246,8 +257,10 @@
 
     .checklist__paragraph-bottom {
         margin: 0;
-        margin-top: 1px;
+        margin-top: 11px;
         font-size: 21px;
+        color: white;
+        font-weight: 500;
     }
 
     .gift__description {
@@ -272,25 +285,36 @@
     }
 
     .gifts__button, .checklist__button {
-        font-size: 32px;
+        font-size: 30px;
     }
 
     .gift__description {
         padding: 0;
+        padding-top: 30px;
     }
 
     .subscribe__description {
         font-size: 17px;
+        margin-left: 0;
     }
 
     .checklist__bottom {
         display: flex;
         flex-direction: column;
-        margin-left: 20px;
+        margin-left: 7px;
     }
 
     .subscribe__button-bot {
         padding: 3px;
         margin-top: 10px;
+    }
+
+    .gifts__button-bottom {
+        margin-left: 0;
+        margin-top: 20px;
+    }
+
+    .subscribe__img {
+        margin-left: 0;
     }
 }
