--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -70,6 +70,14 @@
     object-position: center;
 }
 
+.video__paragraph-bottom {
+    display: none;
+}
+
+.video__link-bottom {
+    display: none;
+}
+
 @media (max-width: 768px) {
     .video {
         margin: 20px 20px 0;
@@ -116,6 +124,18 @@
         width: 100%;
         object-fit: cover;
         height: 99%;
+    }
+
+    .video__paragraph-bottom {
+        display: inherit;
+        color: black;
+        font-weight: 500;
+        font-size: 20px;
+    }
+
+    .video__link-bottom {
+        display: inherit;
+        width: 200px;
     }
 }
 
