--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,6 +1,6 @@
 /* Общие стили */
 .intro {
-    background-color: #e9b60d;
+    background: linear-gradient(#019fc3, #009859, #019fc3);
     margin: 40px 100px 0;
     max-width: 1200px;
     min-height: 600px;
@@ -26,18 +26,7 @@
     display: inline-block;
 }
 
-.intro-photo__wrapper::after {
-    content: '';
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    width: 50px;
-    height: 50px;
-    background-image: url('/images/ew-logo-mini.png');
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-}
+
 
 .intro-photo__image {
     display: block;
