--- a/blocks/offerse/offerse.css
+++ b/blocks/offerse/offerse.css
@@ -17,7 +17,7 @@
     align-items: center;
     height: 200px;
     min-width: 200px;
-    border: #e9b60d solid 4px;
+    border: #019fc3 solid 4px;
     border-radius: 20px;
     position: relative;
     overflow: hidden;
@@ -49,7 +49,7 @@
     bottom: -10px;
     width: 100%;
     text-align: center;
-    color: white;
+    color: black;
 }
 
 .gifts {
@@ -58,7 +58,7 @@
 
 .checklist {
     height: 200px;
-    background-color: #e9b60d;
+    background-color: #009859;
     min-width: 400px;
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
@@ -99,19 +99,23 @@
     padding: 10px;
     border-radius: 10px;
     box-shadow: 5px 5px 7px rgba(0, 0, 0, 0.6);
-    background-color: #e9b60d;
+    background-color: #019fc3;
     font-size: 25px;
     font-weight: bold;
     color: white;
     cursor: pointer;
 }
 
+.gifts__button {
+    background-color: #009859;
+}
+
 .checklist__button:hover, .gifts__button:hover, .subscribe__button:hover {
-    background-color: #b7910d;
+    background-color: #019fc3;
 }
 
 .checklist__button:active, .gifts__button:active, .subscribe__button:active {
-    background-color: #6c570d;
+    opacity: 0.5;
 }
 
 .checklist__paragraph-bottom {
@@ -140,7 +144,7 @@
     display: flex;
     align-items: center;
     height: 200px;
-    background-color: black;
+    background-color: #019fc3;
     border-bottom-right-radius: 20px;
     border-bottom-left-radius: 20px;
     box-shadow: 0px 3px 4px #282828;
@@ -165,7 +169,7 @@
     align-items: center;
     margin-top: 100px;
     height: 200px;
-    background: linear-gradient(#e9b60d, #6c570d);
+    background: linear-gradient(#019fc3, #009859, #019fc3);
     border-radius: 20px;
 }
 
