--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,5 @@
 .page {
-    background-color: #252525;
+    background-color: #dedede;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     font-style: normal;
