--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -32,6 +32,19 @@
     opacity: 0.7;
 }
 
+.footer__info-paragraph {
+    font-weight: 500;
+}
+
+.footer__info-link {
+    text-decoration: none;
+    color: white;
+}
+
+.footer__info-link:hover {
+    opacity: 0.7;
+}
+
 @media (max-width: 768px) {
 
     .footer__social {
