--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -80,6 +80,14 @@
     opacity: 0.5;
 }
 
+.carousel__title {
+    text-align: center;
+    color: #009859;
+    font-size: 2.5rem;
+    font-weight: 1000;
+    margin-bottom: 5px;
+}
+
 /* Медиа-запросы для мобильных устройств */
 @media (max-width: 600px) {
 
