--- a/blocks/offerse/offerse.css
+++ b/blocks/offerse/offerse.css
@@ -551,6 +551,10 @@
     }
 
     .gift {
+        display: none;
+    }
+
+    .gift {
         margin: 20px 10px 0;
         max-width: 100%;
         min-height: auto;
