--- a/pages/index.css
+++ b/pages/index.css
@@ -16,3 +16,7 @@
 @import url(../blocks/video/video.css);
 
 @import url(../blocks/footer/footer.css);
+
+
+
+@import url(../blocks/buttons-mobile/buttons-mobile.css);
