--- a/blocks/header/__image/header__paragraph-left.css
+++ b/blocks/header/__image/header__paragraph-left.css
@@ -4,10 +4,20 @@
     font-size: 40px;
     letter-spacing: 6px;
     padding-left: 10px;
+    white-space: pre-wrap;
 }
 
 @media (max-width: 768px) {
     .header__paragraph-left {
+        padding: 0;
+        font-size: 22px;
+        text-align: center;
+    }
+}
+
+@media (min-width: 768px) {
+    .header__paragraph-left br {
+        display: none;
     }
 }
 
