--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -9,17 +9,22 @@
 .video__header {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    gap: 105px;
     padding-top: 20px;
 }
 
 .video__link {
+    padding-left: 140px;
     cursor: pointer;
 }
 
+.video__link:hover {
+    opacity: 0.7;
+}
+
 .video__link-img {
-    width: 300px;
-    height: 75px;
+    width: 150px;
+    height: 150px;
 }
 
 .video__paragraph {
@@ -78,6 +83,10 @@
     display: none;
 }
 
+.video-mobile {
+    display: none;
+}
+
 @media (max-width: 768px) {
     .video {
         margin: 20px 20px 0;
@@ -90,10 +99,11 @@
         flex-direction: column;
         align-items: center;
         padding-top: 10px;
+        gap: 0;
     }
 
-    .video__link-img {
-        display: none;
+    .video__link {
+        padding-left: 0;
     }
 
     .video__title img {
@@ -136,6 +146,28 @@
     .video__link-bottom {
         display: inherit;
         width: 200px;
+    }
+
+    .video-mobile {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 40px;
+    }
+
+    .video-mobile__title {
+        font-size: 24px;
+        color: black;
+        font-weight: 500;
+    }
+
+    .video-mobile__img {
+        width: 140px;
+        height: 140px;
+    }
+
+    .video-mobile__img:hover {
+        opacity: 0.8;
     }
 }
 
